# rs-life-of-boids

./: Cargo.toml  README.md  TODO.md
.github/workflows/: main.yml
src/: aux.rs  fps.rs  glx.rs  macros.rs  main.rs  points_simulator.rs  render.rs  shaders.rs  support.rs
src/glx/: buffer.rs  image.rs  program_unit.rs  shader_program.rs  support.rs  vertex_array.rs  window.rs
src/shader_programs/: lines.rs  points.rs  triangle.rs
src/shaders/: lines.rs  points.rs  quads.rs  triangle.rs
src/support/: macros.rs  mod.rs
