[package]
name = "life-of-boids"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26"
cgmath = "0.18"
rand = "0.3.16"
image = "0.23.14"
anyhow = "1.0"
thiserror = "1.0"
memoffset = "0.6.3"

[build-dependencies]
gl_generator = "0.14"
